// Code generated by protoc-gen-go-cosmos-orm-proto. DO NOT EDIT.
syntax = "proto3";
package testpb;

import "cosmos/base/query/v1beta1/pagination.proto";
import "testpb/bank.proto";

service BankQuery {
  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc ListBalance (ListBalanceRequest) returns (ListBalanceResponse) {}
  rpc GetSupply (GetSupplyRequest) returns (GetSupplyResponse) {}
  rpc ListSupply (ListSupplyRequest) returns (ListSupplyResponse) {}
}

message GetBalanceRequest {
  string address = 1;
  string denom = 2;
}

message GetBalanceResponse {
  Balance value = 1;
}

message ListBalanceRequest {
  message IndexKey {
    message AddressDenom {
      string address = 1;
      string denom = 2;
    }
    
    message Denom {
      string denom = 1;
    }
    
    oneof index {
      AddressDenom address_denom = 1;
      Denom denom = 2;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListBalanceResponse {
  repeated Balance values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message GetSupplyRequest {
  string denom = 1;
}

message GetSupplyResponse {
  Supply value = 1;
}

message ListSupplyRequest {
  message IndexKey {
    message Denom {
      string denom = 1;
    }
    
    oneof index {
      Denom denom = 1;
    }
  }
  
  message RangeQuery {
    IndexKey from = 1;
    IndexKey to = 2;
  }
  
  oneof query {
    IndexKey prefix_query = 1;
    RangeQuery range_query = 2;
  }
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

message ListSupplyResponse {
  repeated Supply values = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

